--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs-cls/transactional": "^3.2.0",
+    "@nestjs-cls/transactional-adapter-prisma": "^1.3.4",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
